objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Accepted_Date_Time__c</fullName>
        <label>Accepted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Resource</label>
        <referenceTo>AssignedResource</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_Code__c</fullName>
        <formula>Service_Resource__r.CE_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHGC_Reason__c</fullName>
        <label>CHGC Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHGC__c</fullName>
        <label>CHGC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelled_Date_Time__c</fullName>
        <label>Cancelled Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancelled_Reason__c</fullName>
        <label>Cancelled Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_On__c</fullName>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completion_SLA_Met__c</fullName>
        <formula>IF( Completed_On__c &lt; Completion_Time__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion SLA Met</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Time__c</fullName>
        <label>SLA Completion Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <formula>ServiceContract.Contract_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Close__c</fullName>
        <description>Customer Close Time for Email-to-WO code</description>
        <label>Customer Close</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Entered_On__c</fullName>
        <description>The date/time customer entered the WO in system - Used for Email-to-WO code - Field is received in email by &quot;03-APR-2017 11:31&quot;</description>
        <label>Customer Entered On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Open__c</fullName>
        <description>Customer Open Time for Email-to-WO Code</description>
        <label>Customer Open</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SLA_Completion_Due__c</fullName>
        <label>Customer SLA Completion Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Survey_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Satisfaction Survey Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Task_No__c</fullName>
        <label>Customer Task No.</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Territory_No__c</fullName>
        <label>Customer Territory No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_Reference__c</fullName>
        <label>Customer&apos;s Reference</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customers_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dispatched_Date_Time__c</fullName>
        <label>Dispatched Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incomplete_Date_Time__c</fullName>
        <label>Incomplete Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incomplete_Reason_Text__c</fullName>
        <label>Incomplete Reason Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incomplete_Reason__c</fullName>
        <label>Incomplete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete - Customer not ready</fullName>
                </value>
                <value>
                    <fullName>Incomplete - Part Unavailable</fullName>
                </value>
                <value>
                    <fullName>Incomplete - No access</fullName>
                </value>
                <value>
                    <fullName>Incomplete - Other</fullName>
                </value>
                <value>
                    <fullName>Reject - Not interested in Job</fullName>
                </value>
                <value>
                    <fullName>Reject - Not Available Date/Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Service_Notes__c</fullName>
        <label>Internal Service Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Work_Order_Notes__c</fullName>
        <label>Internal Work Order Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <defaultValue>&apos;Australia&apos;</defaultValue>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>CKSW_BASE__Location__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <description>Model Number for Email-to-WO code</description>
        <label>Model Number</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Usages__c</fullName>
        <label>Number of Usages</label>
        <summaryForeignKey>Usage_FSL__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Onsite_Time__c</fullName>
        <label>Onsite Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Service_Count__c</fullName>
        <label>Open Service Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operational_Arrival__c</fullName>
        <label>Operational Arrival</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operational_Completion__c</fullName>
        <label>Operational Completion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Used__c</fullName>
        <label>Parts Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_Date_Time__c</fullName>
        <label>Rejected Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Related Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Representing_Company__c</fullName>
        <label>Representing Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <label>Request Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_SLA_Meet__c</fullName>
        <formula>IF( Onsite_Time__c &lt; Completion_Time__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response SLA Met</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <label>SLA Response Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLA_Count__c</fullName>
        <formula>ServiceContract.SLA_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Fix_Hours__c</fullName>
        <formula>IF(
((CreatedDate + 1) - Now())*24&gt;=0,
((CreatedDate + 1) - Now())*24,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Fix Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Fix_Progress__c</fullName>
        <formula>IF(SLA_Response_Minutes__c&gt;=0,
IF(1-ROUND(SLA_Fix_Hours__c/24,2)&gt;0.7,
  IMAGE(&quot;/resource/slds_colors/red.png&quot;,&quot;Over 70% SLA Reached&quot;,10,(( 1-ROUND(SLA_Fix_Hours__c/24,2))*200)),
  IF(1-ROUND(SLA_Fix_Hours__c/24,2)&gt;0.5,
    IMAGE(&quot;/resource/slds_colors/orange.png&quot;,&quot;Over 50% SLA Reached&quot;,10,(( 1-ROUND(SLA_Fix_Hours__c/24,2))*200)),
    IF(1-ROUND(SLA_Fix_Hours__c/24,2)&gt;0.3,
      IMAGE(&quot;/resource/slds_colors/green.png&quot;,&quot;Over 30% SLA Reached&quot;,10,(( 1-ROUND(SLA_Fix_Hours__c/24,2))*200)),
      IMAGE(&quot;/resource/slds_colors/neutral-1.png&quot;,&quot;Under 30% SLA Reached&quot;,10,(( 1-ROUND(SLA_Fix_Hours__c/24,2))*200))
    )
  )
) &amp; &quot; &quot; &amp; TEXT(ROUND(SLA_Fix_Hours__c,2)) &amp; &quot; hrs remain&quot;
,
IMAGE(&quot;/resource/slds_colors/red.png&quot;,&quot;100% SLA Reached&quot;,10,((1)*200)) &amp; &quot; 0 hrs remain&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Fix Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Response_Minutes__c</fullName>
        <description>Minutes before SLA for 6hours is reached</description>
        <formula>IF(
((CreatedDate + 6/24) - Now())*1440&gt;=0,
((CreatedDate + 6/24) - Now())*1440,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Response Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Response_Progress__c</fullName>
        <description>1-ROUND(SLA_Response_Minutes__c/698,2)</description>
        <formula>IF(SLA_Response_Minutes__c&gt;=0,
IF(1-ROUND(SLA_Response_Minutes__c/360,2)&gt;0.7,
  IMAGE(&quot;/resource/slds_colors/red.png&quot;,&quot;Over 70% SLA Reached&quot;,10,(( 1-ROUND(SLA_Response_Minutes__c/360,2))*200)),
  IF(1-ROUND(SLA_Response_Minutes__c/360,2)&gt;0.5,
    IMAGE(&quot;/resource/slds_colors/orange.png&quot;,&quot;Over 50% SLA Reached&quot;,10,(( 1-ROUND(SLA_Response_Minutes__c/360,2))*200)),
    IF(1-ROUND(SLA_Response_Minutes__c/360,2)&gt;0.3,
      IMAGE(&quot;/resource/slds_colors/green.png&quot;,&quot;Over 30% SLA Reached&quot;,10,(( 1-ROUND(SLA_Response_Minutes__c/360,2))*200)),
      IMAGE(&quot;/resource/slds_colors/neutral-1.png&quot;,&quot;Under 30% SLA Reached&quot;,10,(( 1-ROUND(SLA_Response_Minutes__c/360,2))*200))
    )
  )
) &amp; &quot; &quot; &amp; TEXT(ROUND(SLA_Response_Minutes__c,2)) &amp; &quot; mins remain&quot;
,
IMAGE(&quot;/resource/slds_colors/red.png&quot;,&quot;100% SLA Reached&quot;,10,((1)*200)) &amp; &quot; 0 mins remain&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Response Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLA Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ServiceContractId</field>
                <operation>equals</operation>
                <valueField>SLA__c.Service_Contract__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SLA__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Start_Time__c</fullName>
        <label>Schedule Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_and_Time__c</fullName>
        <label>Scheduled Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_SLA_Met__c</fullName>
        <formula>IF(  Schedule_Start_Time__c &gt;  Onsite_Time__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled SLA Met</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Time__c</fullName>
        <formula>Service_Appointment__r.SchedStartTime</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Serial Number for Email-to-WO code</description>
        <label>Serial Number</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Duration__c</fullName>
        <formula>(((Stop_Onsite_Date_Time__c -  Start_Onsite_Date_Time__c )*24)-( Total_Break_Time_minutes__c /60))*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Engineering_Cost__c</fullName>
        <label>Service Engineering Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Engineering_Margin__c</fullName>
        <formula>Service_Pass_Through_Revenue__c -  Service_Pass_Through_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineering Margin ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Engineering_Margin_perc__c</fullName>
        <formula>IF( Service_Engineering_Revenue__c =0, 0, Service_Engineering_Margin__c / Service_Engineering_Revenue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineering Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Engineering_Revenue__c</fullName>
        <label>Service Engineering Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Gross_Cost__c</fullName>
        <formula>Service_Engineering_Cost__c + Service_Pass_Through_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Gross Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Gross_Margin__c</fullName>
        <formula>Service_Gross_Revenue__c - Service_Gross_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Gross Margin ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Gross_Margin_perc__c</fullName>
        <formula>IF( Service_Gross_Revenue__c =0,0, Service_Gross_Margin__c /Service_Gross_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Gross Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Gross_Revenue__c</fullName>
        <formula>Service_Engineering_Revenue__c + Service_Pass_Through_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Pass_Through_Cost__c</fullName>
        <label>Service Pass Through Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Pass_Through_Margin_Perc__c</fullName>
        <formula>IF( Service_Pass_Through_Revenue__c =0,0, Service_Pass_Through_Margin__c /Service_Pass_Through_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Pass Through Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Pass_Through_Margin__c</fullName>
        <formula>Service_Pass_Through_Revenue__c - Service_Pass_Through_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Pass Through Margin ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Pass_Through_Revenue__c</fullName>
        <label>Service Pass Through Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Work_performed__c</fullName>
        <label>Service Work performed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sign_off_Name__c</fullName>
        <label>Sign-off Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <description>Used in email template</description>
        <formula>Site_Street__c  + &apos;, &apos; + City__c+ &apos;, &apos; + Site_State__c +&apos; &apos;+  Site_Post_Code__c</formula>
        <label>Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_No__c</fullName>
        <label>Site Contact No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact__c</fullName>
        <label>Site Contact</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Post_Code__c</fullName>
        <label>Site Post Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <label>Site State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Street__c</fullName>
        <label>Site Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Instructions__c</fullName>
        <inlineHelpText>Instructions taken from Service Contract</inlineHelpText>
        <label>Standard Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Onsite_Date_Time__c</fullName>
        <label>Start Onsite Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stop_Onsite_Date_Time__c</fullName>
        <label>Stop Onsite Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Name__c</fullName>
        <label>Technical Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Number__c</fullName>
        <label>Technical Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Technician_Email_address__c</fullName>
        <formula>Service_Resource__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technician Email address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Phone_No__c</fullName>
        <formula>Service_Resource__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technician Phone No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_s_ETA__c</fullName>
        <label>Technician&apos;s ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Since_Created__c</fullName>
        <formula>NOW()- CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Break_Time_minutes__c</fullName>
        <label>Total Break Time (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Service_Count__c</fullName>
        <label>Total Service Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_End_Date_Time__c</fullName>
        <label>Travel End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Travel_Start_Date_Time__c</fullName>
        <label>Travel Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WOResponse_SLA_Response_Due__c</fullName>
        <formula>ParentWorkOrder.Response_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Response Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WOService_Customer_Close__c</fullName>
        <formula>ParentWorkOrder.Customer_Close__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Close</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_Customer_Open__c</fullName>
        <formula>ParentWorkOrder.Customer_Open__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Open</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_Customer_Territory_No__c</fullName>
        <formula>ParentWorkOrder.Customer_Territory_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Territory No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_Invoice_Created__c</fullName>
        <formula>ParentWorkOrder.Invoice_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOService_Model_Number__c</fullName>
        <formula>ParentWorkOrder.Model_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_PO_Number__c</fullName>
        <formula>ParentWorkOrder.PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_SLA_Completion_Due__c</fullName>
        <formula>ParentWorkOrder.Completion_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Completion Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WOService_SLA_Fix_Hours__c</fullName>
        <formula>ParentWorkOrder.SLA_Fix_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Fix Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOService_SLA_Fix_Progress__c</fullName>
        <formula>ParentWorkOrder.SLA_Fix_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Fix Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_SLA_Response_Minutes__c</fullName>
        <formula>ParentWorkOrder.SLA_Response_Minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Response Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOService_SLA_Response_Progress__c</fullName>
        <formula>ParentWorkOrder.SLA_Response_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Response Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_Serial_Number__c</fullName>
        <formula>ParentWorkOrder.Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_Site_Contact_No__c</fullName>
        <formula>ParentWorkOrder.Site_Contact_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Contact No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_Site_Contact__c</fullName>
        <formula>ParentWorkOrder.Site_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_Site_Name__c</fullName>
        <formula>ParentWorkOrder.Site_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_Technical_Contact_Name__c</fullName>
        <formula>ParentWorkOrder.Technical_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technical Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOService_Technical_Contact_Number__c</fullName>
        <formula>ParentWorkOrder.Technical_Contact_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technical Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order_Engineering_Cost__c</fullName>
        <label>Work Order Engineering Cost</label>
        <summarizedField>Usage_FSL__c.Total_Engineering_Cost__c</summarizedField>
        <summaryForeignKey>Usage_FSL__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Order_Engineering_Margin__c</fullName>
        <formula>Work_Order_Engineering_Revenue__c - Work_Order_Engineering_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Engineering Margin ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Order_Engineering_Margin_perc__c</fullName>
        <formula>IF(Work_Order_Engineering_Revenue__c=0,0,Work_Order_Engineering_Margin__c /  Work_Order_Engineering_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Engineering Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Work_Order_Engineering_Revenue__c</fullName>
        <label>Work Order Engineering Revenue</label>
        <summarizedField>Usage_FSL__c.Total_Engineering_Revenue__c</summarizedField>
        <summaryForeignKey>Usage_FSL__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Order_Gross_Cost__c</fullName>
        <formula>Work_Order_Engineering_Cost__c +  Work_Order_Pass_Through_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Gross Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Order_Gross_Margin__c</fullName>
        <formula>Work_Order_Gross_Revenue__c -  Work_Order_Gross_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Gross Margin ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Order_Gross_Margin_perc__c</fullName>
        <formula>IF(Work_Order_Gross_Revenue__c=0,0,Work_Order_Gross_Margin__c / Work_Order_Gross_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Gross Margin (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Work_Order_Gross_Revenue__c</fullName>
        <formula>Work_Order_Engineering_Revenue__c +  Work_Order_Pass_Through_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Order_Pass_Through_Cost__c</fullName>
        <label>Work Order Pass Through Cost</label>
        <summarizedField>Usage_FSL__c.Total_Pass_Through_Cost__c</summarizedField>
        <summaryForeignKey>Usage_FSL__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Order_Pass_Through_Margin__c</fullName>
        <formula>Work_Order_Pass_Through_Revenue__c -  Work_Order_Pass_Through_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Pass Through Margin ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>